# Applied_Optimization

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
AugmentedLagrangian/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
ConvexityTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
CsvExporter/: CTestTestfile.cmake  Makefile  main.cc
EigenTutorial/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests.cc
EqualityConstrainedNewton/: CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
EqualityConstrainedNewtonInfeasibleStart/: CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
GaussNewton/: CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
GradientDescent/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cc  unit_tests.cc
GridSearch/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cc  unit_tests.cc
InteriorPoint/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
LBFGS/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
MassSpringProblemEvaluation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
MassSpringSystem/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MassSpringSystemT.hh  MassSpringSystemT_impl.hh  SpringGraph.hh  cmake_install.cmake
NewtonMethods/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cc  unit_tests.cc
OptimalityChecker/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cc  unit_tests.cc
Testing/Temporary/: CTestCostData.txt
include/Algorithms/: AugmentedLagrangian.hh  ConvexityTest.hh  GradientDescent.hh  GridSearch.hh  InteriorPoint.hh  LBFGS.hh  LineSearch.hh  NewtonMethods.hh
include/FunctionBase/: DenseFunctionWrapper.hh  FunctionBase.hh  FunctionBaseSparse.hh  ParametricFunctionBase.hh  ParametricFunctionWrapper.hh
include/Functions/: AreaConstraint2D.hh  AugmentedLagrangianProblem.hh  CircleConstraint2D.hh  CircleConstraintSquared2D.hh  ConstrainedSpringElement2D.hh  ConstrainedSpringElement2DLeastSquare.hh  FunctionNonConvex2D.hh  FunctionQuadratic2D.hh  FunctionQuadraticND.hh  InteriorPointProblem.hh  MassSpringProblem2DDense.hh  MassSpringProblem2DLeastSquare.hh  MassSpringProblem2DSparse.hh  SpringElement2D.hh  SpringElement2DLeastSquare.hh  SpringElement2DWithLength.hh  SpringElement2DWithLengthLeastSquare.hh  SpringElement2DWithLengthPSDHess.hh
include/Utils/: OptimalityChecker.hh  OptimizationStatistic.hh  RandomNumberGenerator.hh  StopWatch.hh
